# pytorm

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
examples/: basic.py  basic_usage.py  dto.py  entity.py  service.py  typer.py  typer_usage.py
examples/usecase/: database.py  dto.py  entity.py
pytorm/repository/: __init__.py  abstract.py  abstract.pyi  repository.py  repository.pyi
typeorm/: __init__.py
typeorm/repository/: __init__.py  abstract.py  abstract.pyi  repository.py  repository.pyi
