[tool.poetry]
name = "pytorm"
version = "0.0.3"
description = "Implementation of repository pattern over SQLAlchemy"
keywords = [
    "python",
    "sqlalchemy",
    "fastapi",
]

license = "MIT"

authors = [
    "Maxim Bigin <i@flaiers.me>"
]

readme = "README.md"
homepage = "https://github.com/flaiers/pytorm"
repository = "https://github.com/flaiers/pytorm"
documentation = "https://github.com/flaiers/pytorm"


[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.37"
multimethod = "^1.8"
fastapi = "^0.78.0"


[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
wemake-python-styleguide = "^0.16.1"
mypy = "^0.971"
pydantic = "^1.9.1"
fastapi = "^0.79.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
