[tool.poetry]
name = "pytorm"
version = "0.0.7"
description = "Implementation of repository pattern over SQLAlchemy"
keywords = [
    "python",
    "sqlalchemy",
    "orm",
    "fastapi",
]

license = "MIT"

authors = [
    "Maxim Bigin <i@flaiers.me>"
]

readme = "README.md"
homepage = "https://github.com/flaiers/pytorm"
repository = "https://github.com/flaiers/pytorm"
documentation = "https://github.com/flaiers/pytorm"


[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.39"
multimethod = "^1.8"


[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
wemake-python-styleguide = "^0.16.1"
mypy = "^0.971"
pydantic = {extras = ["email"], version = "^1.9.1"}
fastapi = "^0.79.0"
asyncpg = "^0.26.0"
typer = "^0.6.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
